Overlapping issue resolved.

--- a/portfolio/src/app/navbar/navbar.component.scss
+++ b/portfolio/src/app/navbar/navbar.component.scss
@@ -4,10 +4,12 @@
     :hover {
         color: black;
     }
-    margin-right: 3%;
+    margin-right: 5px;
+    position: relative;
+    z-index: 0;
 }
 
 .kologo {
     color: #4A4A4A;
-    margin-left: 25%;
+    margin-left: 10px;
 }
